Fix More Filters accordion 'minus' symbol alignment

--- a/src/components/FilterItem/FilterItem.module.scss
+++ b/src/components/FilterItem/FilterItem.module.scss
@@ -108,6 +108,8 @@
                 &:after {
                     content: '-';
                     font-size: 26px;
+                    margin-right: 2px;
+                    margin-top: -3px;
                 }
             }
 
